test/errors/error2.vult
fun foo() {
   1 = 1;
}
